# BattleShip

./: AiPlayer.cpp  AiPlayer.h  BattleShip.cpp  BattleShip.h  Board.cpp  Board.h  CMakeLists.txt  CheatingAI.cpp  CheatingAI.h  GameAttributes.cpp  GameAttributes.h  HumanPlayer.cpp  HumanPlayer.h  HuntAndDestroyAI.cpp  HuntAndDestroyAI.h  Player.cpp  Player.h  RandomAI.cpp  RandomAI.h  Ship.cpp  Ship.h  ShipPlacement.cpp  ShipPlacement.h  main.cpp
